maj text commande

--- a/index.html
+++ b/index.html
@@ -2,23 +2,49 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Git command</title>
+    <title>Vim Cheatsheet</title>
     <link type="text/css" rel="stylesheet" href="style.css"/>
   </head>
   <body>
 <div id="container">
-<div id="title">Git Keyboard shortcut</div>
-<div id="table">
-<section> The basic command </section>
-<table>
-<tr><td><img src="img/flechefushia.gif"><img src="img/cd.gif"></br><p>Open a new finder window</p></td><td><img src="img/flecheblue.gif"><img src="img/cp.gif"></br><p>Open a new finder window</p></td><td><img src="img/flechebordeau.gif"><img src="img/clear.gif"></br><p>Open a new finder window</p></td><td><img src="img/flechefushia.gif"><img src="img/cd-home.gif"></br><p>Open a new finder window</p></td></tr>
-<tr><td><img src="img/flecheviolet.gif"><img src="img/ls.gif"></br><p>Open a new finder window</p></td><td><img src="img/flecheorange.gif"><img src="img/ls-a.gif"></br><p>Open a new finder window</p></td><td><img src="img/flecheblue.gif"><img src="img/ls-l.gif"></br><p>Open a new finder window</p></td><td><img src="img/flecheblack.gif"><img src="img/ls-t.gif"></br><p>Open a new finder window</p></td></tr>
-<tr><td><img src="img/flecherose.gif"><img src="img/etoileall.gif"></br><p>Open a new finder window</p></td><td><img src="img/flechewhite.gif"><img src="img/history.gif"></br><p>Open a new finder window</p></td><td><img src="img/flecheocre.gif"><img src="img/man.gif"></br><p>Open a new finder window</p></td><td><img src="img/flecheciel.gif"><img src="img/sudo.gif"></br><p>Open a new finder window</p></td></tr>
-<tr><td><img src="img/flechewhite.gif"><img src="img/mkdir.gif"></br><p>Open a new finder window</p></td><td><img src="img/flechevioletfonce.gif"><img src="img/touch.gif"></br><p>Open a new finder window</p></td><td><img src="img/flechejaunepale.gif"><img src="img/pwd.gif"></br><p>Open a new finder window</p></td><td><img src="img/flechegrey2.gif"><img src="img/mv.gif"></br><p>Open a new finder window</p></td></tr>
-<tr><td><img src="img/flecheblue.gif"><img src="img/rm.gif"></br><p>Open a new finder window</p></td><td><img src="img/flechebordeau.gif"><img src="img/rm-r.gif"></br><p>Open a new finder window</p></td><td><img src="img/flecherose.gif"><img src="img/cap.gif"></br><p>Open a new finder window</p></td><td><img src="img/flechewhite.gif"><img src="img/purge.gif"></br><p>Open a new finder window</p></td></tr>
-<div></div>
-</table>
+<div id="title">Vim Keyboard</br>shortcut</div>
+<div id="accueil"><a href="http://heysabbinah.github.io/01_simplon_cheatsheet">Up to home !</a></div>
+<div id="commandtitre">The BASICS</div>
+<div id="category">Cursor Movement</div>
+<div id="columns">
+  <ul>
+    <li><span>h:</span> Move left</li>
+    <li><span>j:</span> Move down</li>
+    <li><span>k:</span> Move up</li>
+    <li><span>l:</span> Move right</li>
+    <li><span>w:</span> Jump by start of word</li>
+    <li><span>W:</span> Jump by word</li>
+    <li><span>e:</span> Jump to end of word</li>
+    <li><span>0:</span> Start of line</li>
+    <li><span>$:</span> End of line</li>
+    <li><span>w:</span> Jump by start of word</li>
+
+    <li><span>:w</span> Save the file but don't exit</li>
+    <li><span>:wq</span> Save and quit</li>
+    <li><span>:q</span> Quit without changes</li>
+    <li><span>:q!</span> Quit with changes</li>
+
+    <li><span>ctrl+ws:</span> Split window</li>
+    <li><span>ctrl+ww:</span> Switch between windows</li>
+    <li><span>ctrl+wv:</span> Split window verticaly</li>
+
+    <li><span>yy:</span> copy a line</li>
+    <li><span>yw:</span> copy a word</li>
+    <li><span>p:</span> Put after the cursor</li>
+    <li><span>P:</span> Put before the cursor</li>
+    <li><span>dd:</span> Cut a line</li>
+    <li><span>dw:</span> Cut a current word</li>
+    <li><span>x:</span> Cut a current character</li>
+
+
+
 </div>
+
 </div>
   </body>
 </html>
