--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <div id="title">Vim Keyboard</br>shortcut</div>
 <div id="accueil"><a href="http://heysabbinah.github.io/01_simplon_cheatsheet">Up to home !</a></div>
 <div id="commandtitre">The BASICS</div>
-<div id="category">Cursor Movement</div>
-<div id="columns">
+<div class="columns">
   <ul>
     <li><span>h:</span> Move left</li>
     <li><span>j:</span> Move down</li>
