final responsive sur les trois devices

--- a/index.html
+++ b/index.html
@@ -1,47 +1,50 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
-    <title>Vim Cheatsheet</title>
+    <title>Mac OsX Cheatsheet</title>
     <link type="text/css" rel="stylesheet" href="style.css"/>
-  </head>
-  <body>
+    <meta name="viewport" content="width=device-width">
+</head>
+<body>
 <div id="container">
-<div id="title">Vim Keyboard</br>shortcut</div>
-<div id="accueil"><a href="http://heysabbinah.github.io/01_simplon_cheatsheet">Up to home !</a></div>
-<div id="commandtitre">The BASICS</div>
-<div class="columns">
-  <ul>
-    <li><span>h:</span> Move left</li>
-    <li><span>j:</span> Move down</li>
-    <li><span>k:</span> Move up</li>
-    <li><span>l:</span> Move right</li>
-    <li><span>w:</span> Jump by start of word</li>
-    <li><span>W:</span> Jump by word</li>
-    <li><span>e:</span> Jump to end of word</li>
-    <li><span>0:</span> Start of line</li>
-    <li><span>$:</span> End of line</li>
-    <li><span>w:</span> Jump by start of word</li>
+<a id="haut"></a>
+<div id="title"> Vim</br>Shortcut</div>
+<nav>
+    <li class="home"><a href="http://heysabbinah.github.io/01_simplon_cheatsheet">Up to Home</a></li>
+</nav>
+<section>Keyboard shortcut / THE BASICS </section>
+<div id="command"></div>
+<div id="list">
+    <ul>
+   <li><span>l:</span> Move right</li>
+   <li><span>h:</span> Move left</li>
+   <li><span>j:</span> Move down</li>
+   <li><span>k:</span> Move up</li>
+   <li><span>w:</span> Jump by start of word</li>
+   <li><span>W:</span> Jump by word</li>
+   <li><span>e:</span> Jump to end of word</li>
+   <li><span>0:</span> Start of line</li>
+   <li><span>$:</span> End of line</li>
+   <li><span>w:</span> Jump by start of word</li>
+   <li><span>:w</span> Save the file but don't exit</li>
+   <li><span>:wq</span> Save and quit</li>
+   <li><span>:q</span> Quit without changes</li>
+   <li><span>:q!</span> Quit with changes</li>
 
-    <li><span>:w</span> Save the file but don't exit</li>
-    <li><span>:wq</span> Save and quit</li>
-    <li><span>:q</span> Quit without changes</li>
-    <li><span>:q!</span> Quit with changes</li>
+   <li><span>ctrl+ws:</span> Split window</li>
+   <li><span>ctrl+ww:</span> Switch between windows</li>
+   <li><span>ctrl+wv:</span> Split window verticaly</li>
 
-    <li><span>ctrl+ws:</span> Split window</li>
-    <li><span>ctrl+ww:</span> Switch between windows</li>
-    <li><span>ctrl+wv:</span> Split window verticaly</li>
-
-    <li><span>yy:</span> copy a line</li>
-    <li><span>yw:</span> copy a word</li>
-    <li><span>p:</span> Put after the cursor</li>
-    <li><span>P:</span> Put before the cursor</li>
-    <li><span>dd:</span> Cut a line</li>
-    <li><span>dw:</span> Cut a current word</li>
-    <li><span>x:</span> Cut a current character</li>
-
-
-
+   <li><span>yy:</span> copy a line</li>
+   <li><span>yw:</span> copy a word</li>
+   <li><span>p:</span> Put after the cursor</li>
+   <li><span>P:</span> Put before the cursor</li>
+   <li><span>dd:</span> Cut a line</li>
+   <li><span>dw:</span> Cut a current word</li>
+   <li><span>x:</span> Cut a current character</li>
+   <li><a href="#haut"><span class="violet">Up to top</span></a></li>
+</ul>
 </div>
 
 </div>
