--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Mac OsX Cheatsheet</title>
     <link type="text/css" rel="stylesheet" href="style.css"/>
     <meta name="viewport" content="width=device-width">
+    <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
 <body>
 <div id="container">
